Fix comment dates alignment

--- a/client/src/pages/Comments/Comments.scss
+++ b/client/src/pages/Comments/Comments.scss
@@ -58,6 +58,7 @@
   .comment-date {
     flex: 1;
     color: gray;
+    text-align: center;
   }
   .comment-date-mobile {
     color: gray;
